--- a/packages/styles/scss/layout-components/_grid-layout.scss
+++ b/packages/styles/scss/layout-components/_grid-layout.scss
@@ -19,9 +19,8 @@
   grid-template-columns: repeat(var(--lk-col-count), minmax(0, 1fr));
   grid-template-rows: repeat(auto-fit, minmax(0px, 1fr));
   grid-gap: var(--grid-gap);
+  width: 100%;
   height: 100%;
-  max-height: 100%;
-  max-width: 100%;
   padding: var(--grid-gap);
 
   > * {
